---
= Novedades de las funciones de administración de fábrica de cargas de trabajo de BlueXP 
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de las funciones de administración de la fábrica de cargas de trabajo: Credenciales del proveedor de la nube, mejoras de CodeBox y mucho más.



== 11 de noviembre de 2024



=== Integración de la fábrica de cargas de trabajo en la consola de BlueXP 

Ahora puede utilizar la fábrica de carga de trabajo de la link:https://console.bluexp.netapp.com["Consola BlueXP"^]. La experiencia de la consola de BlueXP  proporciona la misma funcionalidad que la consola de la carga de trabajo de fábrica.

link:https://docs.netapp.com/us-en/workload-setup-admin/console-experiences.html["Aprende a acceder a la fábrica de cargas de trabajo desde la consola de BlueXP "]



== 1 de septiembre de 2024



=== Suscripción a RSS

La suscripción RSS está disponible en el link:https://console.workloads.netapp.com/["consola de fábrica de carga de trabajo"^]. El uso de una fuente RSS es una forma fácil de consumir y estar al tanto de los cambios en la fábrica de cargas de trabajo de BlueXP .

image:screenshot-rss-subscribe-button.png["Captura de pantalla del menú desplegable de ayuda de la consola de fábrica de cargas de trabajo. Un nuevo botón para suscribirse a RSS aparece como una opción en el menú desplegable."]



=== Soporte para una política de permisos única por carga de trabajo

Al agregar las credenciales de AWS en la fábrica de cargas de trabajo, ahora puede seleccionar una única política de permisos, ya sea en modo de lectura o automatización, para cada carga de trabajo y administración de almacenamiento.
