@@ -1,0 +1,71 @@
+---
+sidebar: sidebar 
+permalink: manage-service-accounts.html 
+keywords: service account, service accounts, manage account, create service account, delete service account, workload factory service account 
+summary: Puede administrar su cuenta para que se adapte a sus necesidades creando cuentas de servicio con fines de automatización. 
+---
+= Gestionar cuentas de servicio
+:hardbreaks:
+:allow-uri-read: 
+:nofooter: 
+:icons: font
+:linkattrs: 
+:imagesdir: ./media/
+
+
+[role="lead"]
+Cree cuentas de servicio para que actúen como usuarios de máquinas que automatizan las operaciones de infraestructura. Puede revocar o cambiar el acceso a las cuentas de servicio en cualquier momento.
+
+.Acerca de esta tarea
+Las cuentas de servicio son una funcionalidad de multi-tenancy proporcionada por BlueXP . Los administradores de cuentas crean cuentas de servicio, controlan el acceso y eliminan cuentas de servicio. Puede gestionar las cuentas de servicio en la consola de BlueXP  o en la consola de fábrica de cargas de trabajo de BlueXP .
+
+A diferencia de la administración de cuentas de servicio en BlueXP , donde puede recrear un secreto de cliente, la fábrica de cargas de trabajo solo admite la creación y eliminación de cuentas de servicio. Si desea volver a crear un secreto de cliente para una cuenta de servicio específica en la consola de fábrica de carga de trabajo de BlueXP , deberá hacerlo <<Eliminar una cuenta de servicio,elimine la cuenta de servicio>>y, a continuación, <<Cree una cuenta de servicio,cree uno nuevo>>.
+
+Las cuentas de servicio utilizan un ID de cliente y un secreto para la autenticación en lugar de una contraseña. Los ID de cliente y los secretos se corrigen hasta que el administrador de la cuenta decide cambiarlos. Para usar una cuenta de servicio, necesitará el ID de cliente y secreto para generar el token de acceso o no obtendrá acceso. Tenga en cuenta que los tokens de acceso son de corta duración y solo se pueden utilizar durante varias horas.
+
+.Antes de empezar
+Decidir si desea crear una cuenta de servicio en la consola de BlueXP  o en la consola de fábrica de cargas de trabajo de BlueXP . Hay ligeras diferencias. En las siguientes instrucciones se describe cómo administrar cuentas de servicio en la consola de fábrica de cargas de trabajo de BlueXP .
+
+Para gestionar cuentas de servicio en BlueXP , link:https://docs.netapp.com/us-en/bluexp-setup-admin/concept-identity-and-access-management.html#how-bluexp-iam-works["Obtenga más información sobre la gestión de identidades y accesos de BlueXP "^] y link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-iam-manage-members-permissions.html["Aprenda a agregar miembros de BlueXP  IAM y administrar sus permisos"^].
+
+
+
+== Cree una cuenta de servicio
+
+Al crear una cuenta de servicio, la fábrica de cargas de trabajo BlueXP  permite copiar o descargar un ID de cliente y un secreto de cliente para la cuenta de servicio. Este par de claves se usa para la autenticación con la fábrica de cargas de trabajo de BlueXP .
+
+.Pasos
+. En la consola de fábrica de carga de trabajo, seleccione el icono *Cuenta* y seleccione *Cuentas de servicio*.
++
+image:screenshot-service-account.png["Captura de pantalla que muestra las opciones del menú de cuenta de la interfaz de usuario de fábrica de carga de trabajo de BlueXP . Una de las opciones son las cuentas de servicio."]
+
+. En la página *Cuentas de servicio*, selecciona *Crear cuenta de servicio*.
+. En el cuadro de diálogo Crear cuenta de servicio, introduzca un nombre para la cuenta de servicio en el campo *Nombre de cuenta de servicio*.
++
+El *rol* está preseleccionado como *administrador de cuenta*.
+
+. Seleccione *continuar*.
+. Copie o descargue el ID del cliente y el secreto del cliente.
++
+El secreto del cliente solo es visible una vez y la fábrica de carga de trabajo no lo almacena en ningún lugar. Copie o descargue el secreto y guárdelo de forma segura.
+
+. De manera opcional, puede obtener un token de acceso para la API de gestión de Auth0 ejecutando un intercambio de credenciales de cliente. El ejemplo de cURL muestra cómo puede tomar el ID de cliente y secreto y usar una API para generar el token de acceso que tiene un tiempo limitado. El token ofrece varias horas de acceso a las API de fábrica de cargas de trabajo de BlueXP .
+. Seleccione *Cerrar*.
+
+
+La nueva cuenta de servicio se crea y se muestra en la página Cuentas de servicio.
+
+
+
+== Eliminar una cuenta de servicio
+
+Elimine una cuenta de servicio si ya no necesita utilizarla.
+
+.Pasos
+. En la consola de Workload Factory, selecciona el icono *Cuenta* y selecciona *Cuentas de servicio*.
+. En la página *Cuentas de servicio*, selecciona el menú de tres puntos y luego selecciona *Eliminar*.
+. En el cuadro de diálogo Eliminar cuenta de servicio, introduzca *delete* en el cuadro de texto.
+. Seleccione *Eliminar* para confirmar la eliminación.
+
+
+Se elimina la cuenta de servicio.
